# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./thumbnails";
 export * from "./battles";
+export * from "./feedback";
